# xf86-input-egalax

./: Makefile.am  configure.ac
man/: egalax.man
src/: Makefile.am  egalax.c
